k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ai-jackpot-generator
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ai-jackpot-generator
  template:
    metadata:
      labels:
        app: ai-jackpot-generator
    spec:
      containers:
        - name: ai-jackpot-generator
          image: 479161062075.dkr.ecr.us-west-2.amazonaws.com/apps/jackpotteller:latest
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: ai-jackpot-generator-service
spec:
  selector:
    app: ai-jackpot-generator
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: LoadBalancer
